src/index.scss
$generalPadding: 0 3rem;

body {
  margin: 0;
  font-family:
    -apple-system,
    BlinkMacSystemFont,
    'Segoe UI',
    'Roboto',
    'Oxygen',
    'Ubuntu',
    'Cantarell',
    'Fira Sans',
    'Droid Sans',
    'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  padding: $generalPadding;
}

* {
  box-sizing: border-box;
}

*::before,
*::after {
  box-sizing: border-box;
}

.App {
  text-align: center;
}

// HEADER
header {
  display: flex;
  flex-direction: column;
  justify-items: center;
  margin-bottom: 1rem;
}

hr {
  margin-top: -1.5rem;
  margin-left: -1rem;
  margin-right: -1rem;
  width: 105%;
}

nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-top: 1rem;
}

.rightNav {
  display: flex;
  align-items: center;
  gap: 3rem;
}

.logo {
  height: 45px;
  width: auto;
}

h1 {
  font-size: 1.5rem;
  font-weight: 400;
  margin-left: -2rem;
}

.links {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
  align-items: baseline;
  justify-items: baseline;
  gap: 1rem;
}

li {
  text-decoration: none;
}

.link,
link:active {
  color: #7aaaf9;
  text-decoration: none;
}

.active {
  color: #7aaaf9;
  text-decoration: underline;
}

.linkLi:nth-child(3) {
  padding-left: 1rem;
  border-left: solid 1px black;
}

// MISSIONS

// ROCKETS
.rocketItemContainer {
  display: flex;
  align-items: flex-start;
  justify-content: flex-start;
  width: 100%;
  gap: 1rem;
  margin-bottom: 3rem;
}

.imgContainer {
  width: 25%;
  padding-top: 2rem;
}

.descriptionContainer {
  display: flex;
  flex-direction: column;
  padding-top: 2rem;
  align-items: flex-start;
}

.rocketName {
  font-size: 20px;
  margin-top: -0.1rem;
}

.reserveBadge {
  color: white;
  background: #4d9fb6;
  text-align: center;
  border-radius: 4px;
  font-size: 13px;
  font-weight: 500;
  padding: 0.01rem 0.3rem;
  margin-right: 0.3rem;
}

.reserveBadgeDisabled {
  display: none;
}

.reserveButton {
  padding: 0.6rem;
  color: white;
  background: #3679f6;
  border: none;
  border-radius: 5px;
  text-align: center;
  text-decoration: none;
  font-weight: bold;
}

.reserveButton:hover {
  background: white;
  color: #3679f6;
  border: 1px solid #3679f6;
}

.cancelButton {
  padding: 0.6rem;
  color: #9ea1a7;
  background: white;
  border: 1px solid #9ea1a7;
  border-radius: 5px;
  text-align: center;
  text-decoration: none;
  font-weight: bold;
}

.cancelButton:hover {
  background: #9ea1a7;
  color: white;
  border: 1px solid #9ea1a7;
}

// MY PROFILE
.profileContainer {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.profileSubContainer {
  width: 48%;
}

.profileH2 {
  font-size: 30px;
  font-weight: 500;
}

.profileLi {
  list-style-type: none;
  display: flex;
  align-items: center;
  justify-content: space-between;
  border: 1px solid #9b9a9a;
  color: black;
  margin-top: -1px;
  margin-left: -2.5rem;
  padding: 1rem 1rem;
  height: 4rem;
}

.emptyLi {
  display: flex;
  align-items: center;
  justify-content: center;
  list-style-type: none;
  border: 1px solid #9b9a9a;
  color: #9b9a9a;
  margin-top: -1px;
  margin-left: -2.5rem;
  padding: 1rem 1rem;
  height: 16rem;
}

.profileLiLeft {
  margin: 0;
}

.readMore {
  color: #7aaaf9;
}

.readMore:hover {
  color: #3679f6;
}

